# cohlib

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: notify-cohlib-rb.yml
crates/attrib/: Cargo.toml
crates/attrib/src/: error.rs  lib.rs
crates/build-order/: Cargo.toml
crates/build-order/src/: error.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: discover.rs  images.rs  main.rs
crates/cohlib/: Cargo.toml
crates/cohlib-rb/: Cargo.toml
crates/cohlib-rb/src/: lib.rs
crates/cohlib/replays/: 230.rec  new_failure.rec
crates/cohlib/src/: error.rs  lib.rs
crates/cohlib/tests/: build_order.rs  bundled.rs  reinforce_suspects.rs  replay.rs
crates/data/: Cargo.toml  build.rs
crates/data/src/: error.rs  lib.rs
crates/image/: Cargo.toml
crates/image/src/: error.rs  lib.rs
crates/image/tests/: mipped.rs
crates/image/tests/fixtures/: american_mipped.rrtex  indian_artillery_uk_icon_mipped.rrtex  italian_infantry_ak_icon_mipped.rrtex  semois_2p_mm_handmade.rrtex  semois_4p_mm_handmade.rrtex  spec_ops_us_icon_mipped.rrtex  special_weapons_us_icon_mipped.rrtex
crates/json-import/: Cargo.toml
crates/json-import/src/: error.rs  lib.rs
crates/locale/: Cargo.toml
crates/locale/src/: error.rs  lib.rs
crates/replay/: Cargo.toml
crates/replay/src/: command.rs  command_type.rs  error.rs  errors.rs  lib.rs  map.rs  message.rs  parsed.rs  player.rs
crates/replay/src/command_data/: empty.rs  pbgid.rs  sourced.rs  sourced_index.rs  sourced_pbgid.rs  unknown.rs
crates/replay/src/data/: player.rs  replay.rs
crates/replay/src/data/chunks/: data_data_chunk.rs  mod.rs
crates/replay/src/data/ticks/: command.rs
crates/sga/: Cargo.toml
crates/sga/src/: error.rs  lib.rs
data/10461/: game_data.json
data/10612/: game_data.json
data/10907/: game_data.json
data/11208/: game_data.json
data/11659/: game_data.json
data/13943/: game_data.json
data/14185/: game_data.json
data/15907/: game_data.json
data/16064/: game_data.json
data/16315/: game_data.json
data/17047/: game_data.json
data/17262/: game_data.json
data/17366/: game_data.json
data/18567/: game_data.json
data/19658/: game_data.json
data/21283/: game_data.json
data/21612/: game_data.json
data/24421/: game_data.json
data/24957/: game_data.json
data/25881/: game_data.json
data/26197/: game_data.json
data/26718/: game_data.json
data/26872/: game_data.json
data/27505/: game_data.json
data/28668/: game_data.json
data/29132/: game_data.json
data/30027/: game_data.json
data/31729/: game_data.json
data/33901/: game_data.json
data/9932/: game_data.json
images/44736/: hashes.json  manifest.json
