[package]
name = "data"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
flate2     = { workspace = true }
magnus     = { workspace = true, optional = true }

[features]
magnus = ["dep:magnus"]

[build-dependencies]
serde_json = { workspace = true }
flate2     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
